@@ -3,34 +3,40 @@
 <H1>{$layout.pagetitle}</H1>
 <TABLE WIDTH="100%" CELLPADDING="3">
 	<TR class="dark" {tip text="Click on column name to change sorting order"}>
-		<TD WIDTH="93%" CLASS="fleftu" NOWRAP>
+		<TD WIDTH="91%" CLASS="fleftu" NOWRAP>
 			<IMG SRC="img/channel.gif" ALT=""> <A href="?m=ewxchlist&o=name{if $listdata.direction eq "asc" && $listdata.order eq "name"},desc{/if}"><B>{t}Name:{/t}</B></A> {if $listdata.order eq "name"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 		</TD>
 		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
 			<A href="?m=ewxchlist&o=id{if $listdata.direction eq "asc" && $listdata.order eq "id"},desc{/if}">{t}ID:{/t}</A> {if $listdata.order eq "id"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 		</TD>
 		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
+			<A href="?m=ewxchlist&o=cid{if $listdata.direction eq "asc" && $listdata.order eq "cid"},desc{/if}">STMID:</A> {if $listdata.order eq "cid"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
+		</TD>
+		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
 			<A href="?m=ewxchlist&o=downceil{if $listdata.direction eq "asc" && $listdata.order eq "downceil"},desc{/if}">{t}Downceil:{/t}</A> {if $listdata.order eq "downceil"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
-		</TD>	
+		</TD>
 		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
 			<A href="?m=ewxchlist&o=upceil{if $listdata.direction eq "asc" && $listdata.order eq "upceil"},desc{/if}">{t}Upceil:{/t}</A> {if $listdata.order eq "upceil"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
-		</TD>	
+		</TD>
 		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
 			<A href="?m=ewxchlist&o=downceil_n{if $listdata.direction eq "asc" && $listdata.order eq "downceil_n"},desc{/if}">{t}Night Downceil:{/t}</A> {if $listdata.order eq "downceil_n"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
-		</TD>	
+		</TD>
 		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
 			<A href="?m=ewxchlist&o=upceil_n{if $listdata.direction eq "asc" && $listdata.order eq "upceil_n"},desc{/if}">{t}Night Upceil:{/t}</A> {if $listdata.order eq "upceil_n"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
-		</TD>	
-		<TD NOWRAP WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
+		</TD>
+		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
 			<A href="?m=ewxchlist&o=devcnt{if $listdata.direction eq "asc" && $listdata.order eq "devcnt"},desc{/if}">{t}Devices:{/t}</A> {if $listdata.order eq "devcnt"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
-		</TD>	
+		</TD>
+		<TD WIDTH="1%" CLASS="fbt" align="right" NOWRAP>
+			<A href="?m=ewxchlist&o=nodecnt{if $listdata.direction eq "asc" && $listdata.order eq "nodecnt"},desc{/if}">{t}Nodes:{/t}</A> {if $listdata.order eq "nodecnt"}<IMG SRC="img/{if $listdata.direction eq "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
+		</TD>
 		<TD WIDTH="1%" CLASS="frightu" ALIGN="RIGHT">
 			<NOBR><B>{t 0=$listdata.total}Total: $0{/t}</B></NOBR>
 		</TD>
 	</TR>
 	{if $listdata.total != 0}
         <TR CLASS="DARK">
-	        <TD COLSPAN="8" CLASS="FALL">
+	        <TD COLSPAN="10" CLASS="FALL">
 	                {include file="scroller.html" loop=$channels}
 	        </TD>
 	</TR>
@@ -39,10 +45,13 @@
 	{section name=channels loop=$channels}
 	<TR class="{cycle}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
 		<TD CLASS="fleft" onClick="return self.location.href='?m=ewxchinfo&id={$channels[channels].id}'" class="fleft">
-			<IMG SRC="img/channel.gif" ALT="">&nbsp;<B>{$channels[channels].name}</B>
+			<IMG SRC="img/channel.gif" ALT="">&nbsp;{if $channels[channels].id}<B>{$channels[channels].name}</B>{else}{$channels[channels].name}{/if}
 		</TD>
 		<TD align="right" onClick="return self.location.href='?m=ewxchinfo&id={$channels[channels].id}'">
-			({$channels[channels].id|string_format:"%04d"})
+			{if $channels[channels].id}({$channels[channels].id|string_format:"%04d"}){else}-{/if}
+		</TD>
+		<TD align="right" onClick="return self.location.href='?m=ewxchinfo&id={$channels[channels].id}'">
+			{if $channels[channels].cid}[{$channels[channels].cid|string_format:"%04d"}]{else}-{/if}
 		</TD>
 		<TD align="right" onClick="return self.location.href='?m=ewxchinfo&id={$channels[channels].id}'">
 			{$channels[channels].downceil}
@@ -57,19 +66,24 @@
 			{if $channels[channels].upceil_n}{$channels[channels].upceil_n}{else}-{/if}
 		</TD>
 		<TD align="right" onClick="return self.location.href='?m=ewxchinfo&id={$channels[channels].id}'">
-			{$channels[channels].devcnt} 
+			{$channels[channels].devcnt|default:0}
+		</TD>
+		<TD align="right" onClick="return self.location.href='?m=ewxchinfo&id={$channels[channels].id}'">
+			{$channels[channels].nodecnt|default:0}
 		</TD>
 		<TD CLASS="fright" ALIGN="right">
 			<NOBR>
+			{if $channels[channels].id}
 			<A HREF="?m=ewxchdel&id={$channels[channels].id}" onClick="return confirmLink(this,'{t}Are you sure, you want to delete this channel?{/t}');"><IMG SRC="img/delete.gif" alt="[ {t}Delete{/t} ]" title="[ {t}Delete{/t} ]"></A>
 			<A HREF="?m=ewxchedit&id={$channels[channels].id}"><IMG SRC="img/edit.gif" alt="[ {t}Edit{/t} ]" title="[ {t}Edit{/t} ]"></A>
+			{/if}
 			<A HREF="?m=ewxchinfo&id={$channels[channels].id}"><IMG SRC="img/info.gif" alt="[ {t}Info{/t} ]" title="[ {t}Info{/t} ]"></A>
 			</NOBR>
 		</TD>
 	</TR>
 	{sectionelse}
 	<TR>
-		<TD COLSPAN="8" ALIGN="center" CLASS="fall">
+		<TD COLSPAN="10" ALIGN="center" CLASS="fall">
 			<p>&nbsp;</p>
 			<p><B>{t}No such channels in database.{/t}</B></p>
 			<p>&nbsp;</p>
@@ -78,7 +92,7 @@
 	{/section}
 	{if $listdata.total != 0}
         <TR CLASS="DARK">
-	        <TD COLSPAN="8" CLASS="FALL">
+	        <TD COLSPAN="10" CLASS="FALL">
 	                {include file="scroller.html" loop=$channels}
 	        </TD>
 	</TR>
@@ -87,7 +101,7 @@
 		<TD CLASS="fleftu" COLSPAN="2" ALIGN="right">
 			<IMG SRC="img/info2.gif" ALT="">&nbsp;<B>{t 0=$listdata.total}Total: $0{/t}</B>
 		</TD>
-		<TD CLASS="frightu" COLSPAN="6">
+		<TD CLASS="frightu" COLSPAN="8">
 			&nbsp;
 		</TD>
 	</TR>
